--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,9 @@
 
     <modules>
         <module>../pms-generic</module>
+        <module>../pms-dependencies</module>
         <module>../pms-gateway</module>
+        <module>../pms-application</module>
         <module>../pms-sys</module>
     </modules>
 
@@ -26,6 +28,7 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <spring-cloud-alibaba.version>2021.0.5.0</spring-cloud-alibaba.version>
         <spring-cloud.version>2021.0.5</spring-cloud.version>
+        <hutool.version>5.8.24</hutool.version>
     </properties>
 
     <dependencies>
@@ -41,6 +44,11 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>${hutool.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
